core/src/main/java/uk/ac/uea/cmp/phybre/core/io/nexus/parser/NexusFileParser.java
// Generated from uk/ac/uea/cmp/phybre/core/io/nexus/parser/NexusFile.g4 by ANTLR 4.1
package uk.ac.uea.cmp.phybre.core.io.nexus.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NexusFileParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__121=1, T__120=2, T__119=3, T__118=4, T__117=5, T__116=6, T__115=7, 
		T__114=8, T__113=9, T__112=10, T__111=11, T__110=12, T__109=13, T__108=14, 
		T__107=15, T__106=16, T__105=17, T__104=18, T__103=19, T__102=20, T__101=21, 
		T__100=22, T__99=23, T__98=24, T__97=25, T__96=26, T__95=27, T__94=28, 
		T__93=29, T__92=30, T__91=31, T__90=32, T__89=33, T__88=34, T__87=35, 
		T__86=36, T__85=37, T__84=38, T__83=39, T__82=40, T__81=41, T__80=42, 
		T__79=43, T__78=44, T__77=45, T__76=46, T__75=47, T__74=48, T__73=49, 
		T__72=50, T__71=51, T__70=52, T__69=53, T__68=54, T__67=55, T__66=56, 
		T__65=57, T__64=58, T__63=59, T__62=60, T__61=61, T__60=62, T__59=63, 
		T__58=64, T__57=65, T__56=66, T__55=67, T__54=68, T__53=69, T__52=70, 
		T__51=71, T__50=72, T__49=73, T__48=74, T__47=75, T__46=76, T__45=77, 
		T__44=78, T__43=79, T__42=80, T__41=81, T__40=82, T__39=83, T__38=84, 
		T__37=85, T__36=86, T__35=87, T__34=88, T__33=89, T__32=90, T__31=91, 
		T__30=92, T__29=93, T__28=94, T__27=95, T__26=96, T__25=97, T__24=98, 
		T__23=99, T__22=100, T__21=101, T__20=102, T__19=103, T__18=104, T__17=105, 
		T__16=106, T__15=107, T__14=108, T__13=109, T__12=110, T__11=111, T__10=112, 
		T__9=113, T__8=114, T__7=115, T__6=116, T__5=117, T__4=118, T__3=119, 
		T__2=120, T__1=121, T__0=122, INT=123, FLOAT=124, IDENTIFIER=125, LETTER_US=126, 
		WS=127, NL=128, COMMENT=129;
	public static final String[] tokenNames = {
		"<INVALID>", "'network'", "'TREES'", "'*'", "'taxa'", "'ntax'", "'false'", 
		"'END'", "'nvertices'", "'endblock'", "'confidences'", "'TRUE'", "'h'", 
		"'}'", "'Trees'", "')'", "'QUARTETS'", "'[&R]'", "'matrix'", "'begin'", 
		"'yes'", "'Assumptions'", "'b'", "'lower'", "'BOTH'", "'[&U]'", "'cycle'", 
		"'distances'", "','", "'triangle'", "'w'", "'UPPER'", "'TREE'", "'VLABELS'", 
		"'#nexus'", "'Splits'", "'Draw'", "'Distances'", "'true'", "'FALSE'", 
		"'ASSUMPTIONS'", "'NO'", "'LEFT'", "'vertices'", "'cyclic'", "'Vlabels'", 
		"'Quartets'", "'#NEXUS'", "'Edges'", "'weights'", "'BEGIN'", "'TRANSLATE'", 
		"'CYCLE'", "'left'", "'UTREE'", "'RIGHT'", "'st_quartets'", "'YES'", "'Vertices'", 
		"'l'", "'y'", "'EDGES'", "'draw'", "'dimensions'", "'nodiagonal'", "'nolabels'", 
		"'trees'", "'NODIAGONAL'", "'properties'", "'utree'", "'assumptions'", 
		"'no'", "'SPLITS'", "'TAXLABELS'", "'both'", "'Translate'", "'interleave'", 
		"'FORMAT'", "'='", "'TAXA'", "'x'", "'newtaxa'", "'labels'", "'st_Assumptions'", 
		"'splits'", "'LOWER'", "'DISTANCES'", "'nedges'", "'rotateAbout'", "'Taxa'", 
		"'MATRIX'", "'PROPERTIES'", "':'", "'('", "'DIAGONAL'", "'s'", "'missing'", 
		"'f'", "'VERTICES'", "'''", "'DRAW'", "'{'", "'taxlabels'", "'upper'", 
		"'translate'", "'to_scale'", "'diagonal'", "'vlabels'", "'quartets'", 
		"'nchar'", "'edges'", "';'", "'Network'", "'format'", "'ENDBLOCK'", "'tree'", 
		"'right'", "'DIMENSIONS'", "'nsplits'", "'NETWORK'", "'fit'", "'end'", 
		"'intervals'", "INT", "FLOAT", "IDENTIFIER", "LETTER_US", "WS", "NL", 
		"COMMENT"
	};
	public static final int
		RULE_parse = 0, RULE_nexus_header = 1, RULE_blocks = 2, RULE_block = 3, 
		RULE_begin = 4, RULE_end = 5, RULE_block_declaration = 6, RULE_block_taxa = 7, 
		RULE_taxa_header = 8, RULE_dimensions_taxa = 9, RULE_block_distances = 10, 
		RULE_distances_header = 11, RULE_dimensions_distances = 12, RULE_nchar = 13, 
		RULE_format_distances = 14, RULE_format_distances_list = 15, RULE_format_distances_item = 16, 
		RULE_triangle = 17, RULE_triangle_option = 18, RULE_diagonal = 19, RULE_labels = 20, 
		RULE_labels_header = 21, RULE_labels_option = 22, RULE_block_splits = 23, 
		RULE_splits_block_header = 24, RULE_dimensions_splits = 25, RULE_format_splits = 26, 
		RULE_format_splits_list = 27, RULE_format_splits_item = 28, RULE_labels_splits = 29, 
		RULE_weights_splits = 30, RULE_weights_header = 31, RULE_confidences_splits = 32, 
		RULE_confidences_header = 33, RULE_intervals_splits = 34, RULE_intervals_header = 35, 
		RULE_properties_splits = 36, RULE_properties_splits_list = 37, RULE_properties_splits_item = 38, 
		RULE_properties_splits_name = 39, RULE_cycle = 40, RULE_cycle_header = 41, 
		RULE_cycle_item_list = 42, RULE_cycle_item = 43, RULE_matrix_splits_data = 44, 
		RULE_matrix_split_identifier = 45, RULE_matrix_splits_list = 46, RULE_block_quartets = 47, 
		RULE_quartets_block_header = 48, RULE_matrix_quartets_data = 49, RULE_matrix_quartet = 50, 
		RULE_label_quartet = 51, RULE_weight_quartet = 52, RULE_x_quartet = 53, 
		RULE_y_quartet = 54, RULE_u_quartet = 55, RULE_v_quartet = 56, RULE_sc_quartet = 57, 
		RULE_cs_quartet = 58, RULE_block_assumptions = 59, RULE_assumptions_block_header = 60, 
		RULE_assumptions_data = 61, RULE_assumptions_data_entry = 62, RULE_key_value_pairs = 63, 
		RULE_key_value_pair = 64, RULE_block_trees = 65, RULE_tree_block_header = 66, 
		RULE_translate = 67, RULE_translate_header = 68, RULE_translate_list = 69, 
		RULE_newick_tree = 70, RULE_tree_header = 71, RULE_tree_rest = 72, RULE_tree_definition = 73, 
		RULE_root = 74, RULE_tree_list = 75, RULE_tree_label = 76, RULE_tree_label_optional = 77, 
		RULE_length = 78, RULE_block_network = 79, RULE_network_block_header = 80, 
		RULE_dimensions_network = 81, RULE_draw_network = 82, RULE_draw_network_header = 83, 
		RULE_draw_network_options = 84, RULE_draw_network_option = 85, RULE_scale_network = 86, 
		RULE_rotate_network = 87, RULE_translate_network = 88, RULE_translate_network_header = 89, 
		RULE_translate_network_data = 90, RULE_translate_network_entry = 91, RULE_vertices_network = 92, 
		RULE_vertices_network_header = 93, RULE_vertices_network_data = 94, RULE_vertices_network_entry = 95, 
		RULE_vertices_2d_data = 96, RULE_vertices_3d_data = 97, RULE_vlabels_network = 98, 
		RULE_vlabels_network_header = 99, RULE_vlabels_network_data = 100, RULE_vlabels_network_entry = 101, 
		RULE_vlabels_network_label = 102, RULE_vlabels_data = 103, RULE_edges_network = 104, 
		RULE_edges_network_header = 105, RULE_edges_network_data = 106, RULE_edges_network_entry = 107, 
		RULE_matrix_header = 108, RULE_matrix_data = 109, RULE_matrix_entry_list = 110, 
		RULE_state_composed_word = 111, RULE_state_complex_word = 112, RULE_state_composed_list = 113, 
		RULE_boolean_option = 114, RULE_dimensions = 115, RULE_format = 116, RULE_identifier_list = 117, 
		RULE_missing = 118, RULE_ntax = 119, RULE_newtaxa = 120, RULE_newtaxa_optional = 121, 
		RULE_nsplits = 122, RULE_nvertices = 123, RULE_nedges = 124, RULE_properties = 125, 
		RULE_reference = 126, RULE_star = 127, RULE_taxlabels = 128, RULE_taxlabels_optional = 129, 
		RULE_taxlabels_header = 130, RULE_number = 131;
	public static final String[] ruleNames = {
		"parse", "nexus_header", "blocks", "block", "begin", "end", "block_declaration", 
		"block_taxa", "taxa_header", "dimensions_taxa", "block_distances", "distances_header", 
		"dimensions_distances", "nchar", "format_distances", "format_distances_list", 
		"format_distances_item", "triangle", "triangle_option", "diagonal", "labels", 
		"labels_header", "labels_option", "block_splits", "splits_block_header", 
		"dimensions_splits", "format_splits", "format_splits_list", "format_splits_item", 
		"labels_splits", "weights_splits", "weights_header", "confidences_splits", 
		"confidences_header", "intervals_splits", "intervals_header", "properties_splits", 
		"properties_splits_list", "properties_splits_item", "properties_splits_name", 
		"cycle", "cycle_header", "cycle_item_list", "cycle_item", "matrix_splits_data", 
		"matrix_split_identifier", "matrix_splits_list", "block_quartets", "quartets_block_header", 
		"matrix_quartets_data", "matrix_quartet", "label_quartet", "weight_quartet", 
		"x_quartet", "y_quartet", "u_quartet", "v_quartet", "sc_quartet", "cs_quartet", 
		"block_assumptions", "assumptions_block_header", "assumptions_data", "assumptions_data_entry", 
		"key_value_pairs", "key_value_pair", "block_trees", "tree_block_header", 
		"translate", "translate_header", "translate_list", "newick_tree", "tree_header", 
		"tree_rest", "tree_definition", "root", "tree_list", "tree_label", "tree_label_optional", 
		"length", "block_network", "network_block_header", "dimensions_network", 
		"draw_network", "draw_network_header", "draw_network_options", "draw_network_option", 
		"scale_network", "rotate_network", "translate_network", "translate_network_header", 
		"translate_network_data", "translate_network_entry", "vertices_network", 
		"vertices_network_header", "vertices_network_data", "vertices_network_entry", 
		"vertices_2d_data", "vertices_3d_data", "vlabels_network", "vlabels_network_header", 
		"vlabels_network_data", "vlabels_network_entry", "vlabels_network_label", 
		"vlabels_data", "edges_network", "edges_network_header", "edges_network_data", 
		"edges_network_entry", "matrix_header", "matrix_data", "matrix_entry_list", 
		"state_composed_word", "state_complex_word", "state_composed_list", "boolean_option", 
		"dimensions", "format", "identifier_list", "missing", "ntax", "newtaxa", 
		"newtaxa_optional", "nsplits", "nvertices", "nedges", "properties", "reference", 
		"star", "taxlabels", "taxlabels_optional", "taxlabels_header", "number"
	};

	@Override
	public String getGrammarFileName() { return "NexusFile.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public NexusFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public BlocksContext blocks() {
			return getRuleContext(BlocksContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NexusFileParser.EOF, 0); }
		public Nexus_headerContext nexus_header() {
			return getRuleContext(Nexus_headerContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(264); nexus_header();
			setState(265); blocks();
			setState(266); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nexus_headerContext extends ParserRuleContext {
		public Nexus_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nexus_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterNexus_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitNexus_header(this);
		}
	}

	public final Nexus_headerContext nexus_header() throws RecognitionException {
		Nexus_headerContext _localctx = new Nexus_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nexus_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(268);
			_la = _input.LA(1);
			if ( !(_la==34 || _la==47) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocksContext extends ParserRuleContext {
		public BlocksContext blocks() {
			return getRuleContext(BlocksContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterBlocks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitBlocks(this);
		}
	}

	public final BlocksContext blocks() throws RecognitionException {
		BlocksContext _localctx = new BlocksContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blocks);
		try {
			setState(274);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 19:
			case 50:
				enterOuterAlt(_localctx, 2);
				{
				setState(271); block();
				setState(272); blocks();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Block_declarationContext block_declaration() {
			return getRuleContext(Block_declarationContext.class,0);
		}
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(276); begin();
			setState(277); block_declaration();
			setState(278); end();
			setState(279); match(111);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginContext extends ParserRuleContext {
		public BeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitBegin(this);
		}
	}

	public final BeginContext begin() throws RecognitionException {
		BeginContext _localctx = new BeginContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_begin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(281);
			_la = _input.LA(1);
			if ( !(_la==19 || _la==50) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndContext extends ParserRuleContext {
		public EndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitEnd(this);
		}
	}

	public final EndContext end() throws RecognitionException {
		EndContext _localctx = new EndContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(283);
			_la = _input.LA(1);
			if ( !(_la==7 || _la==9 || _la==114 || _la==121) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_declarationContext extends ParserRuleContext {
		public Block_quartetsContext block_quartets() {
			return getRuleContext(Block_quartetsContext.class,0);
		}
		public Block_distancesContext block_distances() {
			return getRuleContext(Block_distancesContext.class,0);
		}
		public Block_taxaContext block_taxa() {
			return getRuleContext(Block_taxaContext.class,0);
		}
		public Block_networkContext block_network() {
			return getRuleContext(Block_networkContext.class,0);
		}
		public Block_treesContext block_trees() {
			return getRuleContext(Block_treesContext.class,0);
		}
		public Block_assumptionsContext block_assumptions() {
			return getRuleContext(Block_assumptionsContext.class,0);
		}
		public Block_splitsContext block_splits() {
			return getRuleContext(Block_splitsContext.class,0);
		}
		public Block_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).enterBlock_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NexusFileListener ) ((NexusFileListener)listener).exitBlock_declaration(this);
		}
	}
